# turboquant-xpu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: BENCHMARK_QWEN3_30B.md  BENCHMARK_RESULTS.md  CROSS_MODEL_COMPARISON.md  CUSTOM_KERNEL_FEASIBILITY.md  E2E_FUSED_RESULTS.md  ESIMD_DESIGN.md  ESIMD_POC_RESULTS.md  FINDINGS_SUMMARY.md  FUSED_NSPEC_PROFILE.md  FUSED_NSPEC_RESULTS.md  PROJECT_NARRATIVE.md  QUICK_WINS_RESULTS.md  QWEN35_EXPLORATION.md  SYCL_JM_POC_RESULTS.md  SYCL_KERNEL_DESIGN.md  SYCL_POC_BUILD.md  SYCL_POC_RESULTS.md  TRITON_PROFILE_ANALYSIS.md  XPU_PORTING_ANALYSIS.md  vllm_xpu_kernels_issue_271.md
docs/raw/: bench_gemma4_tq.txt  bench_qwen3_tq.txt  quick_wins_results.txt
docs/superpowers/plans/: 2026-04-14-esimd-tq-decode-poc.md  2026-04-14-sycl-jm-phase-a.md  2026-04-15-qwen3-30b-tq-suffix-c1.md  2026-04-15-sycl-followups-post.md
docs/superpowers/specs/: 2026-04-14-sycl-jm-option4-phased.md  2026-04-14-sycl-jointmatrix-splitkv.md  2026-04-15-qwen3-30b-tq-suffix-c1-design.md  2026-04-15-sycl-followups-post-design.md
docs/tuning/: backend_bench_2026-04-14.txt  c1_context_sweep_2026-04-15.txt  esimd_ablations_2026-04-14.md  esimd_bench_2026-04-14.txt  fused_nspec_sweep_2026-04-14.txt  sycl_jm_bench_2026-04-15.txt  sycl_jm_per_task_timings_2026-04-15.md
patches/: README.md  sitecustomize.py  turboquant_register.py
patches/vllm_mounts/: attention.py  attention_config.py  cache.py  registry.py  torch_utils.py  xpu.py
patches/vllm_mounts/backends/: turboquant_attn.py
patches/vllm_mounts/ops/: triton_turboquant_decode.py  triton_turboquant_stage2.py
scripts/: bench_backend_integration.py  bench_c1_context.py  bench_c1_context_chart.py  bench_esimd_spec.py  bench_fused_nspec.py  bench_sycl_jm.py  bench_sycl_spec.py  bench_sycl_zc.py  bench_tq.py  profile_ablate.py  profile_esimd.py  profile_fused_nspec.py  profile_triton_decode.py  quick_wins.sh  sweep_block_kv.py  test_serve.sh  tq_serve.py  tune_fused_nspec.py
scripts/harness/: bench_jm_child.py
site/: Gemfile  _config.yml  index.md
site/_includes/: custom-head.html  head.html
site/_posts/: 2026-04-14-placeholder.md  2026-04-14-spec-decode-intel-arc.md  2026-04-15-sycl-three-attempts-arc-b70.md  2026-04-16-qwen3-30b-tq-suffix-c1.md
src/turboquant_xpu/: __init__.py
src/turboquant_xpu/kernels/: triton_compat.py  triton_decode.py  triton_stage2.py  triton_store.py  xpu_compat.py  xpu_decode.py  xpu_store.py
src/turboquant_xpu/quantizer/: __init__.py
sycl/: CMakeLists.txt  README.md  requirements.txt
sycl/esimd/: CMakeLists.txt  README.md
sycl/esimd/include/: esimd_layout.hpp
sycl/esimd/src/: _smoke_esimd_dpas.cpp  _smoke_esimd_simd.cpp  tq_decode_spec_esimd.cpp  tq_decode_spec_esimd_py.cpp
sycl/include/: tq_layout.hpp
sycl/jm/: CMakeLists.txt  README.md
sycl/jm/include/: jm_layout.hpp
sycl/jm/src/: _smoke_jm_matmul.cpp  tq_decode_spec_jm.hpp  tq_decode_spec_jm_py.cpp  tq_decode_spec_jm_stage1.cpp  tq_decode_spec_jm_stage2.cpp
sycl/reference/: tq_decode_reference.py
sycl/src/: _smoke_hello.cpp  tq_decode_spec.hpp  tq_decode_spec_dpas.cpp  tq_decode_spec_py.cpp  tq_decode_spec_scalar.cpp
sycl/zc/: CMakeLists.txt
sycl/zc/src/: tq_decode_spec_zc.cpp  tq_decode_spec_zc_py.cpp
tests/: conftest.py  test_fused_nspec.py  test_quantizer.py  test_turboquant_attn_fused_path.py  test_xpu_kernels.py  test_xpu_triton_basic.py
tests/esimd/: conftest.py  test_decode_spec_esimd.py  test_decode_spec_esimd_causal.py
tests/sycl/: conftest.py  test_decode_spec_dpas.py  test_decode_spec_scalar.py  test_decode_spec_zc.py  test_hello_sycl.py  test_joint_matrix_smoke.py  test_reference.py
tests/sycl_jm/: conftest.py  test_decode_spec_jm.py  test_smoke_jm.py
